correction mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -402,6 +402,7 @@ ul.skills li {
 @media (max-width: 870px) {
   .cont {
     width: 95%;
+    padding-top: 15px;
   }
   .cont.withlogo .year {
     display: block;
@@ -416,6 +417,7 @@ ul.skills li {
     position: fixed;
     left: 0;
     display: block;
+    font-size: 0.9em;
   }
   .menu-toggle.displayMenu {
     left: 186px;
