--- a/public/css/mobile.less
+++ b/public/css/mobile.less
@@ -1,6 +1,7 @@
 @media (max-width: 870px) {
   .cont{
     width: 95%;
+    padding-top: 15px;
     &.withlogo .year{
       &:after{
         content: "";
@@ -15,6 +16,7 @@
     position: fixed;
     left: 0;
     display: block;
+    font-size: 0.9em;
     &.displayMenu{
       left: 186px;
     }
